engine/tests/detection_corpus/bad/exec_execsync.ts
import { execSync } from 'child_process';
const out = execSync(`ls ${dir}`);
